fixing some bug on mobile device

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -102,6 +102,10 @@ body {
     padding: var(--space-md);
 }
 
+main {
+    height: 100%;
+}
+
 /* main-nanigation */
 .main-nav {
     position: fixed;
